[modify] : build.gradle 내 로컬 환경에 맞춰서 세팅